feat: customize basic branding - logo, favicon, phone, and navigation menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cras - Car Repair & Auto Services</title>
+  <meta name="description" content="12GA Customs - Award winning stainless steel custom truck parts. DPF covers, fenders, bumpers, tool boxes, and premium truck accessories." />
+  <meta name="keywords" content="truck parts, stainless steel, custom truck, DPF covers, truck fenders, truck bumpers, Peterbilt, Kenworth, truck accessories" />
+  <meta name="author" content="12GA Customs" />
+  <title>12GA - Twelve Ga Customs</title>
 </head>
 
 <body>
